--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Harrison Womack</title>
 	<meta charset="UTF-8"> 
-	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet'>
 </head>
 <body>
